--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,10 +72,14 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "rollup": "^4.52.3",
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
+  },
+  "resolutions": {
+    "rollup": "^4.52.3"
   }
 }
